--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,24 +2,39 @@
 
 <section class="login-section d-flex align-items-center justify-content-center">
   <div class="login-box shadow p-4 rounded">
-    <h2 class="text-center mb-4">
-      Login</h2>
-    <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+    <h2 class="text-center mb-4">Login</h2>
+    <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
       <div class="mb-3">
         <label for="email" class="form-label">Email</label>
-        <input type="email" id="email" [(ngModel)]="email" name="email" class="form-control"
-               placeholder="member@example.com or representative@example.com" required />
+        <input
+          type="email"
+          formControlName="email"
+          class="form-control"
+          placeholder="member@example.com or representative@example.com"
+        />
       </div>
       <div class="mb-3">
         <label for="password" class="form-label">Password</label>
-        <input type="password" id="password" [(ngModel)]="password" name="password" class="form-control"
-               placeholder="member123 or rep123" required />
+        <input
+          type="password"
+          formControlName="password"
+          class="form-control"
+          placeholder="member123 or rep123"
+        />
       </div>
       <button type="submit" class="btn w-100 signin-button">Login</button>
       <div class="text-center mt-3">
-        <a [routerLink]="['/forgot-password']" class="text-decoration-none text-secondary">Forgot your password?</a>
-        <br>
-        <a [routerLink]="['/register']" class="text-decoration-none text-secondary">New here? Create an account</a>
+        <a
+          [routerLink]="['/forgot-password']"
+          class="text-decoration-none text-secondary"
+          >Forgot your password?</a
+        >
+        <br />
+        <a
+          [routerLink]="['/register']"
+          class="text-decoration-none text-secondary"
+          >New here? Create an account</a
+        >
       </div>
     </form>
   </div>
