--- a/src/app/core/component/nav-bar/nav-bar.component.html
+++ b/src/app/core/component/nav-bar/nav-bar.component.html
@@ -1,20 +1,41 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container-xxl">
     <a class="navbar-brand me-auto d-flex align-items-center" href="#">
-      <img src="assets/images/logo.png" alt="Logo" width="60" height="60" class="d-inline-block">
+      <img
+        src="/images/logo.png"
+        alt="Logo"
+        width="60"
+        height="60"
+        class="d-inline-block"
+      />
       <span class="ms-2">
-                    <span class="text-split">Split</span><span class="text-easy">Easy</span>
-                </span>
+        <span class="text-split">Split</span><span class="text-easy">Easy</span>
+      </span>
     </a>
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
-         aria-labelledby="offcanvasNavbarLabel">
+    <div
+      class="offcanvas offcanvas-end"
+      tabindex="-1"
+      id="offcanvasNavbar"
+      aria-labelledby="offcanvasNavbarLabel"
+    >
       <div class="offcanvas-header">
         <a class="navbar-brand" href="#">
-          <img src="assets/images/logo.png" alt="Logo" width="30" height="24"
-               class="d-inline-block align-text-top">
-          <span class="text-food">Split</span><span class="text-heaven">Easy</span>
+          <img
+            src="assets/images/logo.png"
+            alt="Logo"
+            width="30"
+            height="24"
+            class="d-inline-block align-text-top"
+          />
+          <span class="text-food">Split</span
+          ><span class="text-heaven">Easy</span>
         </a>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
       </div>
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
@@ -29,12 +50,20 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mx-lg-2" [routerLink]="['/']" fragment="services">
+            <a
+              class="nav-link mx-lg-2"
+              [routerLink]="['/']"
+              fragment="services"
+            >
               <i class="bi bi-gear-fill"></i> Services
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mx-lg-2" [routerLink]="['/']" fragment="howdoesitwork">
+            <a
+              class="nav-link mx-lg-2"
+              [routerLink]="['/']"
+              fragment="howdoesitwork"
+            >
               <i class="bi bi-question-circle-fill"></i> How does it work?
             </a>
           </li>
@@ -49,7 +78,11 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mx-lg-2" [routerLink]="['/']" fragment="contactus">
+            <a
+              class="nav-link mx-lg-2"
+              [routerLink]="['/']"
+              fragment="contactus"
+            >
               <i class="bi bi-envelope-fill"></i> Contact us
             </a>
           </li>
@@ -57,8 +90,14 @@
       </div>
     </div>
     <a [routerLink]="['/login']" class="login-button">Login</a>
-    <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler pe-0"
+      type="button"
+      data-bs-toggle="offcanvas"
+      data-bs-target="#offcanvasNavbar"
+      aria-controls="offcanvasNavbar"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
   </div>
