--- a/src/app/member/pages/side-bar/side-bar.component.html
+++ b/src/app/member/pages/side-bar/side-bar.component.html
@@ -2,7 +2,7 @@
   <nav class="sidebar">
     <section class="header-section">
       <div class="logo">
-        <img src="assets/logo.png" alt="SplitEasy Logo" />
+        <img src="/images/logo.png" alt="SplitEasy Logo" />
         <h2>SplitEasy</h2>
       </div>
     </section>
@@ -10,15 +10,31 @@
     <section class="nav-section">
       <div class="profile-nav-container">
         <div class="profile-section">
-          <img src="assets/user-icon.png" alt="User" class="profile-img" />
-          <p class="profile-name">{{ userName }}</p>
+          <img
+            src="/images/{{ this.user.picture }}"
+            alt="User"
+            class="profile-img"
+          />
+          <p class="profile-name">{{ this.user.fisrtName }}</p>
         </div>
 
         <ul class="nav-links">
-          <li><a routerLink="/member/home" routerLinkActive="active">Home</a></li>
-          <li><a routerLink="/member/contributions" routerLinkActive="active">Contributions</a></li>
-          <li><a routerLink="/member/status" routerLinkActive="active">Status</a></li>
-          <li><a routerLink="/member/settings" routerLinkActive="active">Settings</a></li>
+          <li>
+            <a routerLink="/member/home" routerLinkActive="active">Home</a>
+          </li>
+          <li>
+            <a routerLink="/member/contributions" routerLinkActive="active"
+              >Contributions</a
+            >
+          </li>
+          <li>
+            <a routerLink="/member/status" routerLinkActive="active">Status</a>
+          </li>
+          <li>
+            <a routerLink="/member/settings" routerLinkActive="active"
+              >Settings</a
+            >
+          </li>
         </ul>
       </div>
       <div class="logout-container">
