--- a/src/app/representative/pages/side-bar/side-bar.component.html
+++ b/src/app/representative/pages/side-bar/side-bar.component.html
@@ -2,7 +2,7 @@
   <nav class="sidebar">
     <section class="header-section">
       <div class="logo">
-        <img src="assets/logo.png" alt="SplitEasy Logo" />
+        <img src="/images/logo.png" alt="SplitEasy Logo" />
         <h2>SplitEasy</h2>
       </div>
     </section>
@@ -10,16 +10,42 @@
     <section class="nav-section">
       <div class="profile-nav-container">
         <div class="profile-section">
-          <img src="assets/user-icon.png" alt="User" class="profile-img" />
-          <p class="profile-name">{{ userName }}</p>
+          <img
+            src="/images/{{ user.picture }}"
+            alt="User"
+            class="profile-img"
+          />
+          <p class="profile-name">{{ user.fisrtName }}</p>
         </div>
 
         <ul class="nav-links">
-          <li><a routerLink="/representative/home" routerLinkActive="active">Home</a></li>
-          <li><a routerLink="/representative/members" routerLinkActive="active">Members</a></li>
-          <li><a routerLink="/representative/bills" routerLinkActive="active">Bills</a></li>
-          <li><a routerLink="/representative/contributions" routerLinkActive="active">Contributions</a></li>
-          <li><a routerLink="/representative/settings" routerLinkActive="active">Settings</a></li>
+          <li>
+            <a routerLink="/representative/home" routerLinkActive="active"
+              >Home</a
+            >
+          </li>
+          <li>
+            <a routerLink="/representative/members" routerLinkActive="active"
+              >Members</a
+            >
+          </li>
+          <li>
+            <a routerLink="/representative/bills" routerLinkActive="active"
+              >Bills</a
+            >
+          </li>
+          <li>
+            <a
+              routerLink="/representative/contributions"
+              routerLinkActive="active"
+              >Contributions</a
+            >
+          </li>
+          <li>
+            <a routerLink="/representative/settings" routerLinkActive="active"
+              >Settings</a
+            >
+          </li>
         </ul>
       </div>
       <div class="logout-container">
