--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,13 @@
 /* *********** Custom Properties *********** */
 :root {
-  --first-color: #1565C0;
-  --first-alpha-color: #1565C0BF;
+  --first-color: #1565c0;
+  --first-alpha-color: #1565c0bf;
 
-  --second-color: #42A5F5;
-  --second-alpha-color: #42A5F5BF;
+  --second-color: #42a5f5;
+  --second-alpha-color: #42a5f5bf;
 
-  --third-color: #E3F2FD;
-  --third-alpha-color: #E3F2FDBF;
+  --third-color: #e3f2fd;
+  --third-alpha-color: #e3f2fdbf;
 }
 
 .background {
@@ -76,7 +76,7 @@ body {
 }
 
 .hero-section {
-  background: url(assets/images/portada.png) no-repeat center;
+  background: url(/images/portada.png) no-repeat center;
   background-size: cover;
   width: 100%;
 }
@@ -119,7 +119,7 @@ body {
   background-color: var(--second-color);
 }
 
-.login-section{
+.login-section {
   padding-top: 100px;
   min-height: 100vh;
 }
@@ -148,7 +148,8 @@ body {
   transition: 0.3s ease-in-out;
 }
 
-.navbar-toggler:focus, .btn-close:focus {
+.navbar-toggler:focus,
+.btn-close:focus {
   box-shadow: none;
   outline: none;
 }
@@ -160,7 +161,8 @@ body {
   cursor: pointer;
 }
 
-.nav-link:hover, .nav-link.active {
+.nav-link:hover,
+.nav-link.active {
   color: var(--second-color);
 }
 
@@ -201,11 +203,9 @@ body {
 /* ** Media Queries ** */
 
 @media (min-width: 576px) {
-
 }
 
 @media (min-width: 768px) {
-
 }
 
 @media (min-width: 992px) {
@@ -222,16 +222,15 @@ body {
     transition: 0.3s ease-in-out;
   }
 
-  .nav-link:hover::before, .nav-link.active::before {
+  .nav-link:hover::before,
+  .nav-link.active::before {
     width: 100%;
     visibility: visible;
   }
 }
 
 @media (min-width: 1200px) {
-
 }
 
 @media (min-width: 1400px) {
-
 }
