feat: correction representantes y members

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -6,8 +6,8 @@
     <form [formGroup]="registerForm" (ngSubmit)="registerUser()">
       <div class="mb-3 d-flex gap-3">
         <div>
-          <label for="fisrtName" class="form-label">First Name</label>
-          <input type="text" class="form-control" formControlName="fisrtName" />
+          <label for="firstName" class="form-label">First Name</label>
+          <input type="text" class="form-control" formControlName="firstName" />
         </div>
         <div class="ml-2">
           <label for="lastName" class="form-label">Last Name</label>
