feat: implement billin prograteo

--- a/src/app/core/components/user-settings/user-settings.component.html
+++ b/src/app/core/components/user-settings/user-settings.component.html
@@ -24,6 +24,10 @@
         />
       </div>
       <div>
+        <label for="salary" class="form-label">Salary</label>
+        <input type="number" class="form-control" formControlName="salary" />
+      </div>
+      <div>
         <label for="role" class="form-label">Role</label>
         <select class="form-control" formControlName="role">
           <option>--selection role---</option>
