--- a/src/app/representative/repre-member/repre-member.component.html
+++ b/src/app/representative/repre-member/repre-member.component.html
@@ -11,7 +11,7 @@
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Email</th>
-                <th>Password</th>
+                <th>Salary</th>
                 <th></th>
               </tr>
             </thead>
@@ -20,7 +20,7 @@
                 <td>{{ member.firstName }}</td>
                 <td>{{ member.lastName }}</td>
                 <td>{{ member.email }}</td>
-                <td>{{ member.password }}</td>
+                <td>{{ member.salary }}</td>
                 <td>
                   <div class="d-flex" style="column-gap: 10px">
                     <span
@@ -76,6 +76,14 @@
               placeholder="ejemplo@correo.com"
             />
           </div>
+          <div class="ml-2">
+            <label for="salary" class="form-label">Salary</label>
+            <input
+              type="number"
+              class="form-control"
+              formControlName="salary"
+            />
+          </div>
         </form>
 
         <!-- Formulario register -->
@@ -100,7 +108,14 @@
               formControlName="lastName"
             />
           </div>
-
+          <div class="ml-2">
+            <label for="salary" class="form-label">Salary</label>
+            <input
+              type="number"
+              class="form-control"
+              formControlName="salary"
+            />
+          </div>
           <div>
             <label for="email" class="form-label">Email</label>
             <input
